--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saijannali.github.io/Personal_Portfolio",
+  "homepage": "http://saijannali.github.io/Personal_Portfolio/",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
